--- a/Projeto POO/nbproject/project.properties
+++ b/Projeto POO/nbproject/project.properties
@@ -34,10 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Projeto_POO
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\leonardo.vinagre\\Desktop\\mysql-connector-java-8.0.29\\connector\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=connector\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
