--- a/Projeto POO/nbproject/project.properties
+++ b/Projeto POO/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.output=${dist.jlink.dir}/Projeto_POO
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\leonardo.vinagre\\Desktop\\mysql-connector-java-8.0.29\\connector\\mysql-connector-java-8.0.23.jar
 file.reference.mysql-connector-java-8.0.23.jar-1=connector\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-2=src\\Connector\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
