--- a/Projeto POO/nbproject/private/private.properties
+++ b/Projeto POO/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\leonardo.vinagre\\Documents\\NetBeansProjects\\POO - Faculdade\\Projeto-POO\\Projeto POO\\connector\\mysql-connector-java-8.0.23.jar
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\leonardo.vinagre\\AppData\\Roaming\\NetBeans\\13\\build.properties
