--- a/Projeto POO/nbproject/project.properties
+++ b/Projeto POO/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Projeto POO
+application.vendor=leonardo.vinagre
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,16 +33,13 @@ dist.jar=${dist.dir}/Projeto_POO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Projeto_POO
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\leonardo.vinagre\\Desktop\\mysql-connector-java-8.0.29\\connector\\mysql-connector-java-8.0.23.jar
-file.reference.mysql-connector-java-8.0.23.jar-1=connector\\mysql-connector-java-8.0.23.jar
 file.reference.mysql-connector-java-8.0.23.jar-2=src\\Connector\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}:\
     ${file.reference.mysql-connector-java-8.0.23.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
